@@ -1,3 +1,7 @@
+2004-11-11  Lutz Mueller <lutz@users.sourceforge.net>
+
+	* libexif/*: Replace another few realloc by exif_mem_realloc.
+
 2004-11-10  Lutz Mueller <lutz@users.sourceforge.net>
 
 	* libexif/*.c: Change #include "" to #include <>.
